--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   sqflite_common_ffi: ^2.1.0
+  file_picker: ^4.3.2
+  url_launcher: ^6.0.18
+  url_launcher_windows: ^2.0.2
+  open_file: ^3.2.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
